force-app/main/default/objects/Price_Method_2__c/Price_Method_2__c.object-meta.xml
<CustomObject>
    <label>Link Pricing</label>
    <nameField>
        <label>Product Name (Link)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Link Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>