force-app/main/default/objects/Price_Method_2__c/fields/Buy_End__c.field-meta.xml
<CustomField>
    <fullName>Buy_End__c</fullName>
    <label>Buy End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>