force-app/main/default/objects/Price_Method_2__c/fields/Price_per_Link__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Link__c</fullName>
    <label>Price per Link</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>