force-app/main/default/objects/Price_Method_2__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <length>25</length>
    <type>Text</type>
</CustomField>