force-app/main/default/objects/Price_Method_2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Buy_Start__c</columns>
    <columns>Buy_End__c</columns>
    <columns>Tier_Minimum__c</columns>
    <columns>Price_per_Link__c</columns>
    <columns>Product_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>